--- a/styles/embed.css
+++ b/styles/embed.css
@@ -17,6 +17,11 @@ img {
     width: auto;
     height: auto;
 }
+
+img.pswp__img {
+    max-width: none;
+    max-height: none;
+}
 .content-item {
     margin: 15px 10px;
 }
@@ -86,7 +91,7 @@ button.active {
 }
 .timeline-body {
     position: relative;
-}   
+}
 .header-bar {
     background-color: #FAFAFA;
     border-top: 2px solid #CBCBCB;
@@ -98,7 +103,7 @@ button.active {
 .header-bar__actions {
     position: absolute;
     right: 100px;
-    top: 5px; 
+    top: 5px;
 }
 .btn {
     background-color: rgba(0, 0, 0, 0.15);
@@ -147,7 +152,7 @@ button.active {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.252);
 }
 .btn.comment i {
-    display: none; 
+    display: none;
 }
 .modal-backdrop {
     position: absolute;
@@ -156,7 +161,7 @@ button.active {
     left: 0;
     bottom: 0px;
     right: 0;
-    z-index: 2;    
+    z-index: 2;
 }
 .modal {
     z-index: 3;
@@ -560,7 +565,7 @@ article blockquote li:before {
 /* Remove this is angular-gettext is updated */
 [translate]{visibility:hidden !important;}
 
-/* Media queries */ 
+/* Media queries */
 /* hide permalink on larger screens, show only on hover */
 @media (min-width: 1025px) {
     .lb-post-permalink {
@@ -623,7 +628,7 @@ article blockquote li:before {
         float: right;
     }
     .btn.comment i {
-        display: inline-block; 
+        display: inline-block;
         font-size: 14px;
         line-height: 0.5;
     }
